fixed weird text cutoff

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -221,8 +221,8 @@ $base-parallax-perspective: 8px;
   position: relative;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow-x: visible;
+  overflow-y: visible;
   perspective: $base-parallax-perspective;
   perspective-origin: 0%;
   transform-style: preserve-3d;
@@ -253,6 +253,7 @@ $base-parallax-perspective: 8px;
   @extend .image;
   top: 90px;
   transform: translateZ(2px) scale(parallax-scale-factor(2));
+  z-index: 500;
 }
 
 .base-wrapper2 {
